--- a/index.html
+++ b/index.html
@@ -409,11 +409,10 @@
     </section>
     <!-- 0000000000000000000000 -->
     <section id="tbro3" class="d- my-5">
-
         <div class="container">
             <h2 id="" class="text-success introHead h1 mb-5 w-25 m- py-3 border-bottom border-1">برامج التبرعات </h2>
             <div class="row g-3 justify-content-center bg-">
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/سهم-علاج-كيماوي.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -424,7 +423,7 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">زكاة مال</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">زكاة مال</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
@@ -435,7 +434,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/سهم-مفصل-تعويضي.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -446,8 +445,8 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 ms-2 px-3 rounded-2">زكاة مال</span>
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2"> صدقة جارية</span>
+                                    <span class="bg-success-light h6 py-1 ms-2 px-3 rounded-2">زكاة مال</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2"> صدقة جارية</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
@@ -458,7 +457,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/سهم-كفالة-سرير.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -468,7 +467,7 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">زكاة مال</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">زكاة مال</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
@@ -479,7 +478,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/سهم-الصدقة-الجارية.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -490,7 +489,7 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">صدقة جارية</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">صدقة جارية</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
@@ -501,7 +500,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/سهم-مستلزمات-طبية.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -512,7 +511,7 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">زكاة مال</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">زكاة مال</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
@@ -523,7 +522,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 bg-">
+                <div class="col-md-6 text-white col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
                         <img src="src/images/final img/تبرع-عام.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
@@ -534,8 +533,8 @@
                                     <span class="bg-success h6 py-1 px-3 ms-2 rounded-2">التصنيف</span>
                                 </div>
                                 <div class="bg-">
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">زكاة مال</span>
-                                    <span class="bg-success-subtle h6 py-1 px-3 rounded-2">صدقة جارية</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">زكاة مال</span>
+                                    <span class="bg-success-light h6 py-1 px-3 rounded-2">صدقة جارية</span>
                                 </div>
                             </div>
                             <div class="d-flex fw-bold bg- mt-5 justify-content-between">
