--- a/src/calculation.html
+++ b/src/calculation.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
-<!-- ****************** -->
+    <!-- ****************** -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,11 +25,11 @@
     <title>Apoc 3939/حساب ذكاتك</title>
 </head>
 
-<body>
+<body id="top">
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="r-circle"
-                    src="images/logo-Apoc-2022.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img class="r-circle" src="images/logo-Apoc-2022.png"
+                    alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -100,7 +100,41 @@
             </div>
         </div>
     </nav>
-
+    <!-- ************************ -->
+    <div id="toUp"
+        class="bg-mainColor opacity-100 rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        <a href="#top"><i class="fa-solid text-white fa-arrow-up fa-xl"></i></a>
+    </div>
+    <div id="dropNav"
+        class="bg-mainColor d-none rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        <i class="fa-solid text-white fa-bars fa-xl"></i>
+    </div>
+    <div class="res-nav overflow-hidden d-none position-fixed top-0 end-0 start-0 bottom-0 vh-100">
+        <div class="bg- d-flex flex-column align-items-center justify-content-center w-100 h-100">
+            <i id="closeDropNav" class="fa-solid fa-2xl mb-4 pointer fa-xmark"></i>
+            <ul class="navbar-nav text-white p-3 text-end  mt-0 m-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- ************************ -->
     <section>
         <div>
             <div class="container my-4">
@@ -110,7 +144,8 @@
                         <div class="border border-1 border-muted rounded-3 p-4">
                             <h4 class="border-bottom bg-body-tertiary m-0 pb-2">النقود</h4>
                             <div class="mt-4">
-                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50 جنيها)</span></p>
+                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50
+                                        جنيها)</span></p>
                                 <div class="d-flex justify-content-between">
                                     <input value="" name="" id="moneyInp" placeholder="أدخل القيمة . . ." type="number"
                                         class="form-control w-50">
@@ -171,14 +206,14 @@
         </div>
         </div>
     </section>
-
-
+    <!-- ************************ -->
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png" alt=""></a>
+                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png"
+                                alt=""></a>
                     </div>
                     <div class="col-md-4 w-sm-100 my-3">
                         <div class="d-flex w-75 m-auto bg- h-100 align-items-center icons justify-content-around">
