--- a/src/videos.html
+++ b/src/videos.html
@@ -25,7 +25,7 @@
     <title>Apoc 3939/ الفيدوهات </title>
 </head>
 
-<body>
+<body id="top">
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
             <a class="navbar-brand" href="../index.html"><img class="-circle" src="images/logo-Apoc-2022.png"
@@ -100,29 +100,33 @@
             </div>
         </div>
     </nav>
-
+    <!-- ******************************* -->
+    <div id="toUp"
+        class="bg-mainColor opacity-100 rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        <a href="#top"><i class="fa-solid text-white fa-arrow-up fa-xl"></i></a>
+    </div>
     <div id="dropNav"
-        class="bg-primary dropNav d-none rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        class="bg-mainColor d-none rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
         <i class="fa-solid text-white fa-bars fa-xl"></i>
     </div>
     <div class="res-nav overflow-hidden d-none position-fixed top-0 end-0 start-0 bottom-0 vh-100">
         <div class="bg- d-flex flex-column align-items-center justify-content-center w-100 h-100">
             <i id="closeDropNav" class="fa-solid fa-2xl mb-4 pointer fa-xmark"></i>
-            <ul class="navbar-nav text-dark p-3 text-end  mt-0 m-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav text-white p-3 text-end  mt-0 m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text- active fw-bold" aria-current="page" href="#">الرئيسية</a>
+                    <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="src/about.html">عن الجمعية</a>
+                    <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="src/photos.html"> البوم الصور </a>
+                    <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
+                    <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
+                    <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -130,7 +134,7 @@
             </ul>
         </div>
     </div>
-
+    <!-- ******************************* -->
     <section class="my-5">
         <div class="container">
             <video muted controls autoplay src="images/video2.mp4" class="w-100"></video>
@@ -153,7 +157,7 @@
             </div>
         </div>
     </section>
-    
+    <!-- ******************************* -->
     <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
