--- a/src/allUsersForAdmin.html
+++ b/src/allUsersForAdmin.html
@@ -101,7 +101,7 @@
         </div>
     </nav>
 
-    <section class="container my-3">
+    <section id="adminForm" class="container my-3">
         <form action="" class="w-75 h-100 m-auto p-4 bg-body-tertiary rounded-2" >
             <div class="my-3">
                 <label class=" mb-1" for="adminName">اسم المستخدم</label>
