--- a/src/register.html
+++ b/src/register.html
@@ -156,7 +156,7 @@
             <div class="my-2">
                 <label for="userPayment" class="pb-1 fw-bold fs-5">قيمة التبرع: <span id="paymentValid"
                         class="text-danger d-none fw-normal validation">*يجب ادخال القيمة</span></label>
-                <input class="form-control" type="tel" name="userPayment" id="userPayment" value="">
+                <input class="form-control" type="number" name="userPayment" id="userPayment" value="">
             </div>
 
             <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
