--- a/src/calculation.html
+++ b/src/calculation.html
@@ -138,31 +138,54 @@
     <section>
         <div>
             <div class="container my-4">
-                <h2 class="h1">حساب زكاتك</h2>
+                <h2 class="h1 introHead text-success mb-5 w-25 m- py-3 border-bottom border-1">حساب زكاتك</h2>
                 <div class="row g-4">
                     <div class="col-md-6">
-                        <div class="border border-1 border-muted rounded-3 p-4">
-                            <h4 class="border-bottom bg-body-tertiary m-0 pb-2">النقود</h4>
+                        <div style="height: 16rem;" class="border border-1 border-muted rounded-3 p-4">
+                            <h4 class="border-bottom bg-body-tertiary m-0 pb-2 text-dark">النقود</h4>
                             <div class="mt-4">
-                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50
+                                <p class="m-0 pb-1"> أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50
                                         جنيها)</span></p>
                                 <div class="d-flex justify-content-between">
-                                    <input value="" name="" id="moneyInp" placeholder="أدخل القيمة . . ." type="number"
-                                        class="form-control w-50">
+                                    <input value="" minlength="3" name="" id="moneyInp" placeholder="أدخل القيمة . . ."
+                                        type="number" class="form-control w-50">
                                     <button id="moneyBtn" onclick="getData()" class="btn btn-primary">اعرف
                                         القيمة</button>
                                 </div>
-                                <h5 class="bg-body-tertiary mt-3">قيمة زكاة النقود : <span id="salary">0</span> جنيه
-                                </h5>
+                            </div>
+                            <div class="m-3 bg-">
+                                <div
+                                    class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 ">
+                                    <h2 class="bg-body-tertiary fw-bold text-dark">إجمالي قيمة الزكاة : <span id="total"
+                                            class="text-success fs-3">.</span> جنيه
+                                    </h2>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 bg-">
-                        <div class="my-3 bg-">
-                            <div
-                                class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 p-4 ">
-                                <h2 class="bg-body-tertiary fw-bold">إجمالي قيمة الزكاة : <span id="total">0</span> جنيه
-                                </h2>
+                        <div style="height: 16rem;" class="border border-1 border-muted rounded-3 p-4">
+                            <h4 class="border-bottom bg-body-tertiary m-0 pb-2 text-dark">اشترك في التبرع الشهري</h4>
+                            <div class="btn-group my-3">
+                                <button type="button" class="btn btn-secondary dropdown-toggle"
+                                    data-bs-toggle="dropdown" aria-expanded="false"> قيم التبرع الشهري </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li><button class="dropdown-item" type="button">50</button></li>
+                                    <li><button class="dropdown-item" type="button">100</button></li>
+                                    <li><button class="dropdown-item" type="button">500</button></li>
+                                    <li><button class="dropdown-item" type="button">1000</button></li>
+                                    <li><button class="dropdown-item" type="button">2000</button></li>
+                                    <li><button class="dropdown-item" type="button">5000</button></li>
+                                    <li><button class="dropdown-item" type="button">10,000</button></li>
+                                </ul>
+                            </div>
+                            <div class="mx-3 mt-4 pt-3 bg-">
+                                <div
+                                    class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 ">
+                                    <h2 class="bg-body-tertiary fw-bold text-dark"> قيمة التبرع الشهري : <span id="total"
+                                            class="text-success fs-3">.</span> جنيه
+                                    </h2>
+                                </div>
                             </div>
                         </div>
                     </div>
